[package]
name = "lava-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39 = "2.1.0"
bitcoin = "0.32.5"
esplora-client = { version = "0.11.0", features = ["blocking-https"] }
rand = "0.9.0"
getrandom = "0.2.12"
regex = "1.11.1"
serde = "1.0.218"
serde_json = "1.0.140"
solana-sdk = "2.2.1"
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.81"
thiserror = "1.0.66"
